@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-12-05T16:24:05Z",
+  "timestamp" : "2022-12-06T08:21:44Z",
   "count_outdated" : 256,
   "uniques_outdated" : 96,
-  "count" : 265,
+  "count" : 264,
   "uniques" : 102,
   "clones" : [
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
